# ukui-panel

./: .gitignore  AUTHORS  CMakeLists.txt  COPYING-DOCS  HACKING  Makefile.am  NEWS  README  README.md  autogen.sh  configure.ac  ukui-panel.md
applets/wncklet/: Makefile.am  org.ukui.panel.Wncklet.ukui-panel-applet.in.in  org.ukui.panel.applet.WnckletFactory.service.in  org.ukui.panel.applet.window-list.gschema.xml.in  org.ukui.panel.applet.workspace-switcher.gschema.xml.in  showdesktop.c  showdesktop.h  window-list-menu.xml  window-list.c  window-list.h  window-menu.c  window-menu.h  wncklet.c  wncklet.h  workspace-switcher.c  workspace-switcher.h
data/: Makefile.am  fedora.layout  mageia.layout  opensuse.layout  org.ukui.panel.gschema.xml.in  org.ukui.panel.menubar.gschema.xml.in  org.ukui.panel.object.gschema.xml.in  org.ukui.panel.toplevel.gschema.xml.in  ukui.layout
icons/16x16/: Makefile.am
icons/24x24/: Makefile.am
icons/scalable/: Makefile.am
libukui-panel-applet/: Makefile.am  TODO  libukuipanelapplet-4.0-uninstalled.pc.in  libukuipanelapplet-4.0.pc.in  org.ukui.panel.TestApplet.ukui-panel-applet.in  panel-applet-private.h  test-dbus-applet.c  ukui-panel-applet-factory.c  ukui-panel-applet-factory.h  ukui-panel-applet-gsettings.c  ukui-panel-applet-gsettings.h  ukui-panel-applet.c  ukui-panel-applet.h
panel/: CMakeLists.txt  comm_func.cpp  comm_func.h  customstyle.cpp  customstyle.h  highlight-effect.cpp  highlight-effect.h  iukuipanel.h  iukuipanelplugin.h  main.cpp  panelpluginsmodel.cpp  panelpluginsmodel.h  plugin.cpp  plugin.h  pluginmoveprocessor.cpp  pluginmoveprocessor.h  pluginsettings.cpp  pluginsettings.h  pluginsettings_p.h  popupmenu.cpp  popupmenu.h  ukui-panel_zh_CN.ts  ukuicontrolstyle.cpp  ukuicontrolstyle.h  ukuipanel.cpp  ukuipanel.h  ukuipanelapplication.cpp  ukuipanelapplication.h  ukuipanelapplication_p.h  ukuipanelglobals.h  ukuipanellayout.cpp  ukuipanellayout.h  ukuipanellimits.h  ukuipanelpluginconfigdialog.cpp  ukuipanelpluginconfigdialog.h  virtualkey.cpp  virtualkey.h  windownotifier.cpp  windownotifier.h
panel-daemon/: CMakeLists.txt  main.cpp  watchermanager.cpp  watchermanager.h
panel-daemon/convert-desktop-windowid/: convertdesktoptowinid.cpp  convertdesktoptowinid.h
panel-daemon/datewather/: datewatcher.cpp  datewatcher.h
panel-daemon/dbus-server/: Readme.md  dbus-adaptor.cpp  dbus-adaptor.h  org.ukui.panel-daemon.desktopwid.xml  (+4 more)
plugin-assistant/: CMakeLists.txt  searchwindow.cpp  searchwindow.h  searchwindow.ui  ukuiassistant.cpp  ukuiassistant.h
plugin-calendar/: CMakeLists.txt  ukuicalendar.cpp  ukuicalendar.h  ukuiwebviewdialog.cpp  ukuiwebviewdialog.h  ukuiwebviewdialog.h.autosave  ukuiwebviewdialog.ui
plugin-nightmode/: .CMakeLists.txt.swp  CMakeLists.txt  nightmode.cpp  nightmode.h
plugin-quicklaunch/: CMakeLists.txt  customstyle.cpp  customstyle.h  quicklaunchaction.cpp  quicklaunchaction.h  quicklaunchbutton.cpp  quicklaunchbutton.cpp.autosave  quicklaunchbutton.h  ukuiquicklaunch.cpp  ukuiquicklaunch.cpp.autosave  ukuiquicklaunch.h  ukuiquicklaunchplugin.cpp  ukuiquicklaunchplugin.h
plugin-segmentation/: CMakeLists.txt  segmentation.cpp  segmentation.h  startmenu.cpp  startmenu.h
plugin-startbar/: CMakeLists.txt  startbar.cpp  startbar.h  startmenu_button.cpp  startmenu_button.h  taskview_button.cpp  taskview_button.h
plugin-startmenu/: CMakeLists.txt  startmenu.cpp  startmenu.h  xdgcachedmenu.cpp
plugin-statusnotifier/: .org.kde.StatusNotifierItem.xml.swp  CMakeLists.txt  dbusproperties.cpp  dbusproperties.h  dbustypes.cpp  statusnotifier.cpp  statusnotifier.h  statusnotifier_storagearrow.cpp  statusnotifier_storagearrow.h  statusnotifierbutton.cpp  statusnotifierbutton.h  statusnotifierwatcher.cpp  statusnotifierwatcher.h  statusnotifierwatcher_interface.h  statusnotifierwidget.cpp  statusnotifierwidget.h
plugin-taskbar/: CMakeLists.txt  quicklaunchaction.cpp  quicklaunchaction.h  ukuigrouppopup.cpp  ukuigrouppopup.h  ukuitaskbar.cpp  ukuitaskbar.h  ukuitaskbarconfiguration.cpp  ukuitaskbarconfiguration.h  ukuitaskbarconfiguration.ui  ukuitaskbaricon.cpp  ukuitaskbaricon.h  ukuitaskbarplugin.cpp  ukuitaskbarplugin.h  ukuitaskbutton.cpp  ukuitaskbutton.h  ukuitaskclosebutton.cpp  ukuitaskclosebutton.h  ukuitaskgroup.cpp  ukuitaskgroup.h  ukuitaskwidget.cpp  ukuitaskwidget.h
plugin-taskview/: CMakeLists.txt  taskview.cpp  taskview.h
plugin-tray/: CMakeLists.txt  effects.pri  highlight-effect.cpp  highlight-effect.h  storagearrow.cpp  storagearrow.h  traydynamicgsetting.cpp  traydynamicgsetting.h  trayicon.cpp  trayicon.h  traystorage.cpp  traystorage.h  ukuistoragewidget.cpp  ukuistoragewidget.h  ukuitray.cpp  ukuitray.h  ukuitrayplugin.cpp  ukuitrayplugin.h  ukuitraystrage.cpp  ukuitraystrage.h  xfitman.cpp  xfitman.h
sni-daemo/: CMakeLists.txt  statusnotifieritem_interface.cpp  statusnotifieritem_interface.h
sni-xembed-proxy/: CMakeLists.txt  main.cpp  snidbus.cpp  sniproxy.cpp  sniproxy.h  snixembedproxy.cpp  snixembedproxy.h  statusnotifierwatcher_interface.cpp  statusnotifierwatcher_interface.h  xcbutilss.h
tools/: AUTHORS  CHANGELOG  CMakeLists.txt  README.md  ukui-build-tools-config-version.cmake.in  ukui-build-tools-config.cmake.in  ukui-transupdate
ukui-calendar/: CMakeLists.txt  calendardbus.cpp  calendardbus.h  xatom-helper.cpp  xatom-helper.h
ukui-flash-disk/: CMakeLists.txt  MacroFile.h  MainController.cpp  MainController.h  UnionVariable.cpp  UnionVariable.h  clickLabel.cpp  clickLabel.h  datacdrom.cpp  datacdrom.h  device-manager.cpp  device-manager.h  device-operation.cpp  device-operation.h  ejectInterface.cpp  ejectInterface.h  fdapplication.cpp  fdapplication.h  fdclickwidget.cpp  fdclickwidget.h  fdframe.cpp  fdframe.h  flashdiskdata.cpp  flashdiskdata.h  gpartedinterface.cpp  gpartedinterface.h  interactivedialog.cpp  interactivedialog.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qclickwidget.cpp  qclickwidget.h  repair-dialog-box.cpp  repair-dialog-box.h  test-repair-dialog.cpp  ui_mainwindow.h  ukui-flash-disk.desktop  ukui-flash-disk.pro  (+2 more)
(+879 files in other folders)
